# browsion

./: ACTIVATION_FIX.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  FIXED_AND_TESTED.md  GETTING_STARTED.md  GRID_LAYOUT_AND_CLONE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  PROJECT_STATUS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  README.md.old  RELEASE_NOTES_v0.9.5.md  TEST_GUIDE.md  UI_OPTIMIZATION.md  index.html  package-lock.json  package.json  run-dev.sh  test-window-activation.sh  test_compile.sh  vite.config.ts
--name/src-tauri/: tauri.conf.json
.github/workflows/: build.yml  release.yml
docs/: local-api-inventory.md  local-api.md  mcp-server-design.md
docs/plans/: 2026-02-26-v04-improvements.md  2026-02-27-cdp-phase6-flatten-mode.md  2026-03-01-comprehensive-test-audit-release.md  2026-03-01-e2e-comprehensive-coverage.md  2026-03-01-final-test-coverage-and-cleanup.md  2026-03-01-ui-audit-fixes-test-expansion.md
scripts/: cargo
src/: App.tsx  main.tsx  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: .gitkeep
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs  templates.rs
src-tauri/src/agent/: action.rs  cdp.rs  engine.rs  llm.rs  mod.rs  session.rs  types.rs
src-tauri/src/api/: action_log.rs  browser.rs  lifecycle.rs  mod.rs  profiles.rs  snapshots.rs  ws.rs
src-tauri/src/cft/: api.rs  download.rs  mod.rs
src-tauri/src/commands/: mcp_tools.rs  mod.rs  proxy.rs  recording.rs  snapshots.rs  workflow.rs
src-tauri/src/config/: mod.rs  schema.rs  storage.rs  validation.rs
src-tauri/src/platform/: ime.rs  mod.rs
src-tauri/src/process/: launcher.rs  manager.rs  mod.rs  port.rs  sessions_persist.rs
src-tauri/src/recording/: manager.rs  mod.rs  playback.rs  schema.rs  session.rs
src-tauri/src/tray/: mod.rs
src-tauri/src/window/: activation.rs  mod.rs
src-tauri/src/workflow/: executor.rs  manager.rs  mod.rs  schema.rs
src-tauri/tests/: README.md  agent_integration_test.rs  api_integration_test.rs  config_and_cft_test.rs  e2e_agent_test.rs  e2e_browser_test.rs  manual_external_sites_test.rs
src/__tests__/: constants.test.ts  utils.test.ts
src/api/: tauri.ts
src/components/: AISettings.tsx  AgentPanel.tsx  ConfirmDialog.tsx  LaunchArgsSelector.tsx  McpPage.tsx  MonitorPage.tsx  ProfileForm.tsx  ProfileItem.tsx  ProfileList.tsx  RecordingList.tsx  RecordingPlayer.tsx  SchedulePanel.tsx  Settings.tsx  SnapshotModal.tsx  Toast.tsx  WorkflowEditor.tsx  WorkflowList.tsx  WorkflowRunModal.tsx  constants.ts
src/hooks/: useWebSocket.ts
src/styles/: index.css
src/types/: agent.ts  profile.ts
tests/mcp-playground/: README.md  external-browser-guide.md  mcp-config.json  test-execution-report.md  test-fixes-report.md
tests/mcp-playground/profiles/: test-profile.json
tests/mcp-playground/scripts/: run-all-tests.sh  setup.sh
tests/mcp-playground/test-cases/: 00-index.md  01-profile-management.md  02-browser-lifecycle.md  03-navigation.md  04-mouse-keyboard.md  05-forms-interaction.md  06-tabs-management.md  07-cookies-storage.md  08-screenshot.md  09-frames-dialogs.md  10-network-mocking.md  11-emulation.md  12-workflows-recording.md
