[package]
name = "browsion"
version = "0.2.3"
description = "Cross-platform browser launcher for managing Chrome profiles"
authors = ["you"]
edition = "2021"

[lib]
name = "browsion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "browsion"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.31"
thiserror = "1.0"
dirs = "5.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# AI Agent dependencies
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio-stream = "0.1"
base64 = "0.22"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "stream"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
