[package]
name = "browsion"
version = "0.9.3"
description = "Cross-platform browser launcher for managing Chrome profiles"
authors = ["you"]
edition = "2021"
default-run = "browsion"

[lib]
name = "browsion_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "browsion"
path = "src/main.rs"

[[bin]]
name = "browsion-mcp"
path = "src/bin/browsion-mcp.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "test"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
sysinfo = "0.31"
thiserror = "1.0"
dirs = "5.0"
parking_lot = "0.12"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }

# CDP and CfT
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
zip = "0.6"

# Local HTTP API for MCP / automation
axum = { version = "0.7", features = ["json", "ws"] }
tower-http = { version = "0.5", features = ["cors"] }
tower = { version = "0.5", features = ["limit"] }

# MCP Server SDK (official)
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
base64 = "0.22"
schemars = "0.8"
anyhow = "1"

# Platform-specific dependencies
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
base64 = "0.22"
percent-encoding = "2.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
